This commit will fix overflowing release version label in Admin

--- a/admin/src/css/configuration.less
+++ b/admin/src/css/configuration.less
@@ -96,6 +96,12 @@ dl.horizontal {
     .row {
       margin: 0;
     }
+    .release-name {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: block;
+    }
     li div[class^="col-"] {
       display: inline-block;
       vertical-align: middle;
